# subskin

./: .coveragerc  .gitignore  .pending_task.backup_20260412_215237  .pending_task_phase3.md  .pending_task_phase3_simple.md  AGENTS.md  COLLECTION_STATUS.md  DAILY_PROGRESS_2026-04-12.md  HIGHEST_PRIORITY_TASK.md  IMPLEMENTATION_PLAN.md  INSTALLATION.md  Makefile  PROGRESS_REPORT_2026-04-12_FINAL.md  PROJECT_FRAMEWORK.md  README.md  coverage.xml  debug_pubmed.py  design-improvement-todo-20260404.md  findings.md  force_run_today.py  force_run_update.py  full_crawl.py  full_crawl_fast.py  progress.md  pyproject.toml  pytest.ini  run_cma_crawl.py  run_manual_update.py  scheduler_config.json  subskin-scheduler.service  task_plan.md  test_crawler.py  test_pubmed.py  test_sms_verification.py
.agents/skills/brainstorming/: SKILL.md
.agents/skills/planning-with-files/: SKILL.md
.github/workflows/: ci.yml  test.yml  weekly.yml
.sisyphus/drafts/: vitiligo-data-collection.md
.sisyphus/plans/: vitiligo-data-collection.md
assets/: logo_preview.html
configs/: .env.example  crawler_config.yaml  data_sources.yaml  web_config.yaml
docs/: photo-upload-and-ai-kb-requirements.md  upload-photo-ai-knowledgebase-design.md
docs/design/: feature-upload-ai-knowledge-base.md  photo-upload-and-ai-kb-architecture.md  photo-upload-and-ai-kb-requirements.md  photo-upload-and-ai-kb-schedule.md  photo-upload-and-ai-kb-workflow.md  quick-task-1-delivery-summary.md  quick-task-1-final-report.md  risk-mitigation-plan.md
docs/mvp/: 30-day-execution-plan.md  stage1-feature-inventory.md
requirements/: ai.txt  base.txt  dev.txt  web.txt
scripts/: create_encyclopedia_posts.py  deploy.sh  final_solution.py  process_image.sh  quick_round.py  round_corners.py  simple_round_corners.py  validate_data_sources.py
src/: __init__.py  cli.py  config.py  exceptions.py
src/crawlers/: __init__.py  clinical_trials_crawler.py  cma_crawler.py  pubmed_crawler.py  semantic_scholar_crawler.py
src/exporters/: __init__.py  json_exporter.py  markdown_exporter.py
src/generators/: __init__.py
src/models/: __init__.py  data_source.py  paper.py  trial.py
src/notifications/: __init__.py  qq_notifier.py  wechat_notifier.py
src/processors/: __init__.py  deduplicator.py  summarizer.py  translator.py
src/scheduler/: __init__.py  update_scheduler.py
src/settings/: __init__.py  base.py  logging.py  paths.py  settings.py
src/utils/: __init__.py  cache.py  data_source_manager.py  incremental_tracker.py  logger.py  rate_limiter.py
src/web/: __init__.py
src/web/api/: __init__.py
src/web/auth/: __init__.py
src/web/llm_qa/: __init__.py
tests/: conftest.py  test_cache.py  test_cli.py  test_clinical_trials_crawler.py  test_cma_crawler.py  test_config.py  test_data_source.py  test_data_source_manager.py  test_deduplicator.py  test_exceptions.py  test_exporters.py  test_incremental_tracker.py  test_json_exporter.py  test_logger.py  test_logging.py  test_markdown_exporter.py  test_models.py  test_notifications.py  test_paper.py  test_pubmed_crawler.py  test_qq_notifier.py  test_rate_limiter.py  test_semantic_scholar_crawler.py  test_settings.py  test_summarizer.py  test_translator.py  test_trial.py  test_update_scheduler.py  test_wechat_notifier.py
tests/backend/: __init__.py  conftest.py
tests/backend/api/: __init__.py  conftest.py  test_comment.py  test_comment_admin.py  test_content.py  test_rag.py  test_user.py  test_vasi.py
tests/backend/services/: test_auth.py  test_comment.py  test_sms.py  test_vasi.py
web/: STRUCTURE.md
web/app/src/api/: community.ts
web/app/src/components/community/: FeedWaterfall.vue  FollowButton.vue
web/app/src/composables/: useGeolocation.ts
web/app/src/views/: CommunityPage.vue  PostDetailPage.vue
web/backend/: .env.example  README.md  check_oauth_config.py  create_admin.py  import_log.txt  import_pubmed_data.py  migrate_add_oauth_fields.py  requirements.txt  start.sh  test_chat_only.py  test_db.py  test_rag_qa.py  test_volcengine.py  update_db.py
web/backend/api/: __init__.py  comment.py  comment_admin.py  community.py  content.py  models.py  oauth.py  rag.py  social.py  user.py  vasi.py
web/backend/app/: main.py
web/backend/database/: database.py  init_db.py  migration_add_sms_security.py  migration_add_social_and_city.py  models.py
web/backend/models/: __init__.py  comment.py  community.py  rag.py  sms.py  user.py  vasi.py
web/backend/services/: alipay_auth.py  auth.py  comment.py  community.py  rag.py  recommendation.py  sms.py  unified_auth.py  vasi.py  wechat_auth.py
web/deploy/: docker-compose.yml  nginx-subskin.cnf  nginx.conf  subskin-backend.service
web/vitepress/: package-lock.json  package.json
web/vitepress/.vitepress/: config.js
web/vitepress/.vitepress/theme/: vars.css
web/vitepress/docs/: chat.html  index.md
web/vitepress/docs/.vitepress/: config.js
web/vitepress/docs/.vitepress/theme/: custom.css  index.js
web/vitepress/docs/community/: about.md
web/vitepress/docs/community/chat/: experience.md  mood.md
web/vitepress/docs/encyclopedia/: epidemiology.md  index.md
web/vitepress/docs/news/: index.md
web/vitepress/docs/vasi/: history.md  index.md  report.md  trend.md
(+36 files in other folders)
