[project]
name = "subskin"
version = "1.0.0"
description = "SubSkin: AI-powered vitiligo knowledge base"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Lianqing Chen", email = "lianqing_chan@126.com"}
]

[tool.black]
line-length = 88
target-version = ['py py39']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | web/backend
  | web/vitepress
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/yourusername/subskin"
Repository = "https://github.com/yourusername/subskin"

[project.scripts]
test = "pytest -q"
format = "black src/ tests/ && isort src/ tests/"
lint = "ruff check src/ tests/"

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]
